--- a/Lab-5.ipynb
+++ b/Lab-5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "white-jackson",
+   "id": "solved-warrior",
    "metadata": {},
    "source": [
     "## Skills Lab 5 Program"
@@ -10,58 +10,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "pretty-headquarters",
+   "execution_count": null,
+   "id": "interim-moldova",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter a name:  teresa\n",
-      "Enter the year you were born:  2022\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The year cannot be in the future, try again.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the year you were born:  2003\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "teresa , you are 18 years old\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = input(\"Enter a name: \")\n",
-    "while True:\n",
-    "    try:\n",
-    "        year = int(input(\"Enter the year you were born: \"))\n",
-    "        if(year > 2021):\n",
-    "            raise ValueError\n",
-    "        break\n",
-    "    except ValueError:\n",
-    "        print(\"The year cannot be in the future, try again.\")\n",
-    "age = 2021 - year\n",
-    "print(name, \", you are\", age, \"years old\")"
+    "def ValueError():\n",
+    "    print(\"Your date was not formatted correctly or not a legal date, try again.\")\n",
+    "def separateDate(dateEntered):\n",
+    "    \n",
+    "    month = \"\"\n",
+    "    month = month + dateEntered[0] + dateEntered[1]\n",
+    "    day = \"\"\n",
+    "    day = day + dateEntered[3] + dateEntered[4]\n",
+    "    year = \"\"\n",
+    "    year = year + dateEntered[6] + dateEntered[7] + dateEntered[8] + dateEntered[9]\n",
+    "    month = int(month)\n",
+    "    day = int(day)\n",
+    "    year = int(year)\n",
+    "    return day, month, year\n",
+    "\n",
+    "date = input(\"Enter your birthdate (mm/dd/yyyy): \")\n",
+    "dayBorn, monthBorn, yearBorn = separateDate(date)\n",
+    "\n",
+    "\n",
+    "date = input(\"Enter today's date (mm/dd/yyyy): \")\n",
+    "currDay, currMonth, currYear = separateDate(date)\n",
+    "        \n",
+    "print(\"Computing your age...\")\n",
+    "if(monthBorn == currMonth and dayBorn == currDay):\n",
+    "    ageYears = currYear - yearBorn\n",
+    "    print(\"Happy Birthday,\", name, \"you are exactly\", ageYears, \"years old.\")\n",
+    "elif(monthBorn < currMonth or (monthBorn == currMonth and dayBorn < currDay)):\n",
+    "    ageYears = currYear - yearBorn\n",
+    "    print(name, \"you are\", ageYears, \"years old and have had a birthday this year\")\n",
+    "else:\n",
+    "    ageYears = currYear - yearBorn - 1\n",
+    "    print(name, \"you are\", ageYears, \"years old and have not had a birthday yet this year\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coupled-citizenship",
+   "id": "structural-outline",
    "metadata": {},
    "outputs": [],
    "source": []
